# conda-express

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  action.yml  binary-sha256.txt  build.rs  cx.lock.hash  get-cx.ps1  get-cx.sh  pixi.toml  pyproject.toml  runtime.condarc
.bench/: cx_bootstrap.json  cx_create_dryrun.json  cx_passthrough.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 0_bug.yml
.github/actions/setup-cx/: action.yml  package-lock.json  package.json
.github/actions/setup-cx/src/: index.js
.github/workflows/: build.yml  ci.yml  docs.yml  publish-crates.yml  publish-pypi.yml  release.yml  zizmor.yml
Formula/: cx.rb
conda-emscripten/conda_emscripten/: extractor.py  magic.py  patches.py  plugin.py  solver.py
crates/cargo-package/: Cargo.toml  build.rs
crates/cargo-package/src/: main.rs
crates/cx-build/: Cargo.toml
crates/cx-build/src/: main.rs
crates/cx-wasm/: Cargo.toml
crates/cx-wasm/src/: bootstrap.rs  extract.rs  lib.rs  sharded.rs
crates/cx-web/: Cargo.toml
crates/cx-web/src/: bootstrap.rs  error.rs  extract.rs  lib.rs
crates/cx-web/www/: index.html
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
cx-jupyterlite/: package.json
demos/: _cx_setup.tape  _settings.tape  passthrough.tape  quickstart.tape  status.tape  workspaces.tape
docker/: .dockerignore  Dockerfile  Dockerfile.cxz
docs/: background.md  changelog.md  conf.py  configuration.md  design.md  features.md  index.md  plan.md  quickstart.md  robots.txt  scope.md
docs/_static/css/: custom.css
docs/guides/: browser.md  conda-installers.md  custom-builds.md  index.md  offline-and-airgapped.md  package-manager-fit.md  upgrade-from-early-cx.md  use-cx-in-github-actions.md  verify-release-artifacts.md
docs/reference/: cli.md  github-action.md  included-plugins.md  installer.md
install/: get-cx.sh
python/conda-emscripten/conda_emscripten/: __init__.py  extractor.py  plugin.py  solver.py
python/conda_express/: __init__.py  __main__.py  _find_cx.py  finder.py
recipes/conda-browser/: recipe.yaml
recipes/conda-browser/lockfile-env/: pixi.toml
recipes/conda-browser/patches/: 002-skip-unneeded-deps.patch
recipes/conda-emscripten/: recipe.yaml
recipes/conda-emscripten/patches/: 002-skip-unneeded-deps.patch  006-no-threading-emscripten.patch  007-emscripten-lockf-noop.patch  008-emscripten-skip-outdated-check.patch
scripts/: build_pypi_wheel.py  get-cx.ps1  get-cx.sh
spike/cx-wasm-spike/: Cargo.toml
spike/cx-wasm-spike/src/: bootstrap.rs  extract.rs  lib.rs
spike/cx-wasm-spike/www/: index.html
src/: cli.rs  commands.rs  config.rs  main.rs
src/snapshots/: cx__config__tests__condarc.snap  cx__config__tests__embedded_config.snap
tests/: cli_integration.rs  conda_prompt_stdout_pipe_regression.rs
tests/snapshots/: cli_integration__cx_help.snap
