[package]
name = "conda-express"
version = "0.6.0"
edition = "2024"
description = "Cargo installer for the conda-express cx binary built with conda-pronto"
license = "BSD-3-Clause"
repository = "https://github.com/jezdez/conda-express"
homepage = "https://jezdez.github.io/conda-express/"
keywords = ["conda", "bootstrapper", "rattler", "package-manager"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/binary-sha256.txt",
  "/build.rs",
  "/src/main.rs",
]

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
sha2 = "0.11"

[build-dependencies]
sha2 = "0.11"
ureq = "3.3"
