[package]
name = "cx-web"
version = "0.1.0"
edition = "2024"
description = "Browser-based conda environment bootstrapper — WASM module powered by rattler"
license = "BSD-3-Clause"
repository = "https://github.com/jezdez/conda-express"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rattler_conda_types = { version = "0.43", default-features = false }
rattler_lock = { version = "0.26", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "AbortController",
    "AbortSignal",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
] }
zip = { version = "2", default-features = false, features = ["deflate"] }
ruzstd = "0.8"
bzip2-rs = "0.1"
tar = { version = "0.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
