[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
description = "Internal build tools for conda-express"
publish = false

[dependencies]
clap = { version = "4.6", features = ["derive"] }
rattler_conda_types = { version = "0.44", default-features = false }
rattler_lock = { version = "0.27", default-features = false }
sha2 = "0.10"
toml = "1.1"
